# pyqt-meep

./: .gitignore  README.md  app.py  geometry_scripting_guide.txt  meep_script.py  pyproject.toml
docs/: architecture_refactor.md
examples/: harminv.yaml  kpts.yaml  mpb.yaml  tran.yaml
meep_gui/: __init__.py  bootstrap.py  geometry_script.py  run_manager.py  run_protocol.py  run_worker.py  store.py
meep_gui/analysis/: __init__.py  common.py  domain_artifacts.py  field_animation.py  frequency_domain.py  harminv.py  images.py  meep_k_points.py  mpb.py  mpb_support.py  preparation.py  sweep.py  transmission.py  transmission_support.py  types.py  workspace.py
meep_gui/model/: __init__.py  analysis.py  constants.py  domain.py  objects.py  project.py  results.py
meep_gui/persistence/: __init__.py  dumpers.py  loaders.py  project_io.py
meep_gui/preview/: __init__.py  domain.py  domain_render.py
meep_gui/primitives/: __init__.py  base.py  geometry.py  materials.py  monitors.py  sources.py
meep_gui/results/: __init__.py  normalize.py  types.py
meep_gui/scene/: __init__.py  compiler.py  runtime.py  types.py
meep_gui/script/: __init__.py  analyses.py  common.py  domain_preview.py  frequency_domain.py  generator.py  meep_k_points.py  mpb.py  simulation.py  transmission.py
meep_gui/sim/: __init__.py  builder.py  imports.py  runner.py
meep_gui/specs/: __init__.py  analysis.py  builders.py  simulation.py
meep_gui/ui/: __init__.py  common.py  scope.py
meep_gui/validation/: __init__.py  errors.py  expressions.py  names.py  parameter_import.py
(+69 files in other folders)
